[gd_scene load_steps=2 format=3 uid="uid://de68ebh07kngj"]

[ext_resource type="Script" uid="uid://43i0j0a51xiv" path="res://scripts/ui/MainMenu.gd" id="1_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -128.0
offset_right = 89.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "RINGCYCLE (Prototype)"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Continue"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="RunSpeciesSmokeTest" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Run Species Smoke Test"
